# Spelda

./: .gitmodules  README.md  cargo.toml
spelda/: Cargo.toml
spelda/godot/: StateInstance.gdns  project.godot  state.gdnlib
spelda/godot/scenes/: main.tscn  player.tscn
spelda/src/: renderables.rs  state.rs  systems.rs
