[package]
name = "spelda"
version = "0.1.0"
authors = ["supbscripter, cdrch, suddenly-eva"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
vermarine-engine = { path = "../VermarineEngine/vermarine-engine" }
gdnative = "0.8"